--- a/budget/templates/budget/home.html
+++ b/budget/templates/budget/home.html
@@ -12,7 +12,7 @@
 
   <div class="d-flex main-container">
 
-    {% include "budget/includes/menu.html" %}
+    {% comment %} {% include "budget/includes/menu.html" %} {% endcomment %}
 
     <div class="d-flex flex-column middle-column">
       <div class="d-flex">
@@ -70,7 +70,7 @@
     
           <div class="input-group mb-3">
             <span class="input-group-text">Value</span>
-            <input type="text" class="form-control" name="value" placeholder="ex. 250">
+            <input type="number" class="form-control" name="value" placeholder="ex. 250">
           </div>
     
           <div class="input-group mb-3">
@@ -143,7 +143,7 @@
 
                     <form class="mb-0 ms-auto" action="{% url 'budget:deleteExpense' expense.id%}" method='POST'>
                       {% csrf_token %}
-                      <button style="all: unset">
+                      <button type="submit" style="all: unset">
                         <i class="fa-regular fa-trash-can"></i>
                         {% comment %} <div class="hidden">{{expense.category}}</div> {% endcomment %}
                       </button>                     
