--- a/budget/templates/budget/home.html
+++ b/budget/templates/budget/home.html
@@ -130,12 +130,12 @@
                       {% csrf_token %}
                       
                       <input type="hidden" name="category" value="{{expense.category}}" />
-                      <input class="form-control me-1" 
+                      <input class="form-control edit-expense-input me-1" 
                              name="description" 
                              placeholder="{{expense.description}}"
                              value="{{expense.description}}"/>
                       <p class="mb-0">:</p>
-                      <input class="form-control ms-1" 
+                      <input class="form-control edit-expense-input ms-1" 
                              name="value" 
                              placeholder="{{expense.value}}"
                              value="{{expense.value}}"/>
