--- a/budget/templates/budget/index.html
+++ b/budget/templates/budget/index.html
@@ -38,26 +38,30 @@
     </div>
 
     <div class="ms-auto right-column">
-  
+
       <form class="input-form" 
           action="{% url "budget:index" %}" 
           method="POST">
 
-      {% csrf_token %}
-      <h1>Login</h1>
-      <label class="form-label">Username</label>
-      <input class="form-control border-black" type="text" name="username" />
+        {% csrf_token %}
+        <h1>Login</h1>
+        <label class="form-label">Username</label>
+        <input class="form-control border-black" type="text" name="username"/>
 
-      <label class="form-label">Password</label>
-      <input class="form-control border-black" type="password" name="password" />
+        <label class="form-label">Password</label>
+        <input class="form-control border-black" type="password" name="password" />
 
-      <div class='text-danger'>{{ error }}</div>
-      <button class="btn btn-dark submit-button" type="submit">Log in</button>
+        <div class='text-danger'>{{ error }}</div>
+        <button class="btn btn-dark submit-button" type="submit">Log in</button>
 
-      <p>
-        <a class="link-dark "href="{% url "budget:createAccount" %}">Create An Account</a>
-      </p>
-    </form>
+        <p>
+          <a class="link-dark "href="{% url "budget:createAccount" %}">Create An Account</a>
+        </p>
+      </form>
+
+      <div>Demo Account Login</div>
+      <div>Username: example</div>
+      <div>Password: Budget123</div>
 
     </div>
   
